--- a/src/Cursor/Cursor.css
+++ b/src/Cursor/Cursor.css
@@ -1,7 +1,3 @@
-body {
-    cursor: none !important;
-}
-
 a {
     cursor: none;
 }
